[tool.poetry]
name = "rsatlantis"
version = "0.1.0"
description = ""
authors = ["John Victor <johnvictorfs@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
djangorestframework = "^3.9"
django-cors-headers = "^2.4"
django-rest-auth = "^0.9.3"
whitenoise = "^4.1"
bleach = "^3.1"
django-debug-toolbar = "^1.11"
requests = "^2.21"
django-extensions = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
